# archivey-2

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  ASYNC.md  CHANGELOG.md  CLAUDE.md  COMPARISON.md  CONTRIBUTING.md  IDEAS.md  LICENSE  PLAN.md  README.md  SPEC.md  VISION.md  mkdocs.yml  pyproject.toml
.claude/skills/code-review-skill/: SKILL.md
.claude/skills/openspec-propose/: SKILL.md
.cursor/: environment.json  install.sh
.cursor/commands/: code-review.md
.githooks/: pre-commit
.github/workflows/: atheris-fuzz.yml  benchmark-wall.yml  ci.yml  docs-deploy.yml  native-codec-stress.yml  ppmd-native-stress.yml  publish.yml  rapidgzip-truncation-sweep.yml  windows-ppmd-stress.yml
artifacts/atheris/sevenzip_header/: crash-meta.txt
artifacts/atheris/zip_tar/: crash-meta.txt
benchmarks/: RESULTS.md  __init__.py  fixtures.py  harness.py  tar_iso_lock_baseline.py  wall_baseline.py
benchmarks/baselines/: structural.json  wall_time.json
docs/: acknowledgements.md  api.md  costs.md  formats.md  gotchas.md  index.md  known-issues.md  library-analysis.md  parallel-reader.md  philosophy.md  safe-extraction.md  threat-model.md  usage.md
docs/decisions/: 0001-native-7z-not-py7zr.md  0002-native-rar-metadata-unrar-data.md  0003-member-streams-opt-in.md  0004-streaming-bool-not-intent-enum.md  0005-sync-only-v1.md  0006-stdlib-zipfile.md  0007-mutable-archive-member.md  0008-single-accelerator-rapidgzip.md  0009-zstd-stdlib-backports.md  0010-no-silent-buffer-nonseekable.md  0011-zero-dependency-core.md  0012-usage-errors-outside-archiveyerror.md  0013-cross-platform-name-safety-policies.md  0014-integrity-verdicts-from-reads-not-close.md  index.md
docs/grab-bag/: ARCHITECTURE.md  ASYNC.md  COMPARISON.md  SPEC.md  index.md  parallel-reader.md
docs/internal/: index.md  known-issues.md  library-analysis.md  open-issues.md  ppmd-exit-after-green-exploration.md  ppmd-native-investigation-brief.md  ppmd-native-investigation-results.md  pyppmd-upstream-report.md  rapidgzip-upstream-report.md  rar-unrar-piping-investigation.md  release-checklist.md  release-repo-cutover.md  threat-model.md
openspec/: config.yaml  project.md
openspec/changes/adversarial-string-corpus-contract/: brief.md  design.md  proposal.md  tasks.md
openspec/changes/anti-member-type-and-nonfile-open/: design.md  proposal.md  tasks.md
review/: FIXES.md  README.md  STATUS.md  SUMMARY.md  backlog.md  complexity.md  concurrency.md  deep-concurrency.md  deep-simplification.md  deep-unknown-unknowns.md  latent-bugs.md  other.md  roadmap.md  specs-docs.md  tests.md  unknown-unknowns.md
review/api-coherence/: QUESTIONS.md  SUMMARY.md  brief.md  ergonomics.md  members-scope.md  parity.md  surface.md
review/cli-product/: QUESTIONS.md  SUMMARY.md  brief.md  output.md
review/debt-ledger/: QUESTIONS.md  SUMMARY.md  brief.md  drift-and-decisions.md  structural.md  tests.md
review/next/: 01-rar-reader.md  README.md
review/performance/: QUESTIONS.md  SUMMARY.md  attrib.py  brief.md  budget-table.md  gate-efficacy.md  hotspots.md  investigation-report.md  listing-attribution.md  listing_probe.py  measurements.py  repro.py  residual-gap.md
review/stream-layering/: QUESTIONS.md  SUMMARY.md  brief.md
scripts/: accel_leak_trace.py  bench_rapidgzip_auto_threshold.py  ci_run_native_modules.py  dual_accelerator_repro.py  gen_rar_fixtures.py  griffe_extensions.py  inflate64_native_stress.py  install-git-hooks.sh  macos_accelerator_debug.py  native_stress_common.py  ppmd_native_stress.py  ppmd_uaf_valgrind.py  pyppmd_crash_repro.py  rapidgzip_native_stress.py  rapidgzip_truncation_sweep.py  windows_ppmd_stress.py
scripts/exploration/: README.md  zipcrypto_codec_rejection.py  zipcrypto_compressibility_probe.py
src/archivey/: __init__.py  __main__.py  archive_reader.py  config.py  core.py  cost.py  diagnostics.py  exceptions.py  filters.py  measurement.py  reader.py  types.py
tests/: check_zero_dep_core.py  conftest.py  create_adversarial.py  fuzz_rar_parser.py  fuzz_sevenzip_parser.py  sample_archives.py  streams_util.py  test_accelerator_corruption.py  test_accelerator_shutdown.py  test_adversarial_corpus.py  test_archivey_config.py  test_atheris_crc_fixup.py  test_benchmark_gate.py  test_binaryio.py  test_blake2sp.py  test_cli.py  test_codec_descriptor.py  test_codecs.py  test_concurrent_cooperative.py  test_concurrent_multithread.py  test_corpus_sweep.py  test_cost_receipt.py  test_crypto_findings.py  test_data_model.py  test_detection.py  test_diagnostics.py  test_directory.py  test_duplicates_is_current.py  test_error_context.py  test_error_translation.py  test_extraction.py  test_extras_imported.py  test_hash_combine.py  test_iso.py  test_libarchive_corpus.py  test_listing_limits.py  test_locked_stream.py  test_measurement.py  test_member_selector.py  test_member_stream_contract.py  (+38 more)
tests/_dev_oracle/: conftest.py  create_archives.py  sample_archives.py  test_corrupted_archives.py  test_encrypted_archives.py  test_extractall.py  test_filters.py  test_io_helpers.py  test_lzip_stream.py  test_missing_packages.py  test_nested_compressed_archives.py  test_open_compressed_stream.py  test_open_member.py  test_open_nonseekable.py  test_open_stream.py  test_open_url.py  test_path_traversal.py  test_read_archives.py  test_small_reads.py  test_statsio.py  test_streaming_modes.py  test_usage_errors.py  test_xz_stream.py  testing_utils.py
tests/archivey/: conftest.py  create_archives.py  sample_archives.py  test_corrupted_archives.py  test_encrypted_archives.py  test_extractall.py  test_filters.py  test_io_helpers.py  test_iso_reader.py  test_lzip_stream.py  test_missing_packages.py  test_nested_compressed_archives.py  test_open_compressed_stream.py  test_open_member.py  test_open_nonseekable.py  test_open_stream.py  test_open_url.py  test_path_traversal.py  test_read_archives.py  test_small_reads.py  test_statsio.py  test_streaming_modes.py  test_usage_errors.py  test_xz_stream.py  testing_utils.py
tests/atheris_fuzz/: __init__.py  __main__.py  crc_fixup.py  runner.py  seeds.py  targets.py
(+773 files in other folders)
