[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "archivey"
version = "0.2.0.dev0"
description = "Python library for reading, streaming, and safely extracting archives"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Davi Figueiredo", email = "gh@davitf.com" }
]

[project.optional-dependencies]
7z = [
    "pyppmd>=1.1.0",
    "inflate64>=1.0.0",
    "backports.zstd>=1.0.0; python_version < '3.14'",
    "brotli>=1.1.0",
    "cryptography>=45.0.0",
]
rar = [
    "cryptography>=45.0.0",
    # TODO(phase-7): the spec's [rar] bundle also pulls a Blake2sp backend for
    # RAR5 checksum verification. No standalone package decided yet (stdlib hashlib
    # has blake2b/blake2s but not the parallel blake2sp); resolve when format-rar lands.
]
crypto = [
    "cryptography>=45.0.0",
]
7z-write = [
    "py7zr>=1.0.0",
]
iso = [
    "pycdlib>=1.14.0",
]
zstd = [
    "backports.zstd>=1.0.0; python_version < '3.14'",
]
lz4 = [
    "lz4>=4.4.5",
]
unix-compress = [
    "uncompresspy>=0.4.0",
]
cli = [
    "tqdm>=4.67.0",
]
# rapidgzip backs BOTH gzip (RapidgzipFile) and bzip2 (its bundled IndexedBzip2File). The
# separate indexed_bzip2 package is deliberately NOT a dependency: loading both libraries into
# one process corrupts the heap and aborts on macOS (overlapping statically-linked C++ symbols).
# >=0.16.0 is the floor known to expose IndexedBzip2File. See docs/known-issues.md.
seekable = [
    "rapidgzip>=0.16.0",
]
recommended-lite = [
    "archivey[7z,rar,7z-write,iso,zstd,lz4,unix-compress,cli]",
]
recommended = [
    "archivey[recommended-lite,seekable]",
]
# [all] is the "everything" alias. It currently equals [recommended]: after the
# compression-library evaluation (docs/library-analysis.md) the two dead alternative
# backends that used to live here were dropped — python-xz (v2 reads XZ with its own
# native xz.py over stdlib lzma; archivey-dev#214 — never imported) and pyzstd (the zstd
# decode decision is stdlib compression.zstd / backports.zstd, not pyzstd; it was only a
# test-fixture generator and is now in the dev group). A future alternative/secondary
# backend would be re-added here behind its own extra. tests/test_extras_imported.py guards
# against a dead dependency slipping back into any user-facing extra.
all = [
    "archivey[recommended]",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-timeout>=2.3.0",
    "pyrefly>=0.20.0",
    "ty>=0.0.1a13",
    "ruff>=0.11.0",
    "coverage[toml]>=7.6.0",
    "py7zr>=1.0.0",
    "rarfile>=4.2",
    "backports.zstd>=1.0.0",
    "lz4>=4.4.5",
    "brotli>=1.1.0",
    # pycdlib (the [iso] extra) is in the dev group like the other optional format libs, so
    # the ISO backend's tests run in the default dev env and the type checkers can resolve the
    # PyCdlibIO annotation. The core-only CI leg installs with --no-dev, so it stays absent
    # there and the zero-dep core / graceful-degradation paths are still exercised.
    "pycdlib>=1.14.0",
    # uncompresspy is the runtime decoder for unix-compress (.Z); ncompress is a test-only
    # LZW *compressor* (uncompresspy only decompresses) used to generate .Z fixtures.
    "uncompresspy>=0.4.0",
    "ncompress>=1.0.0",
    "cryptography>=45.0.0",
    # Exercise real third-party stream objects in tests/test_stream_inputs.py: urllib3 is
    # what requests' response.raw is (the canonical file-like network input); fsspec's file
    # objects are ubiquitous in data pipelines (local/S3/GCS/HTTP behind one interface).
    "urllib3>=2.0.0",
    "fsspec>=2024.0.0",
]
# Documentation toolchain. Kept out of `dev` so the common lint/test loop stays light;
# build the site with `uv run --group docs mkdocs build --strict`.
docs = [
    "mkdocs>=1.6.0",
    "mkdocstrings[python]>=0.26.0",
    "mkdocs-autorefs>=1.2.0",
    "mkdocs-material>=9.6.0",
    "griffe-fieldz>=0.2.1",
]

[tool.hatch.version]
path = "src/archivey/__init__.py"
validate-bump = false

[tool.ruff]
target-version = "py311"
# The frozen DEV oracle under tests/_dev_oracle is reference code, not ours to lint.
extend-exclude = ["tests/_dev_oracle"]

[tool.ruff.lint]
extend-select = ["I", "F", "C4", "ISC", "RET", "BLE"]

[tool.pyrefly]
search-path = ["src"]
project-includes = ["src"]
python_version = "3.11"

[tool.ty]
# ty is Astral's own from-scratch type checker (not pyright/mypy-based). The library
# is kept clean on both ty and Pyrefly.
[tool.ty.environment]
python-version = "3.11"
root = ["src"]

[tool.ty.src]
# Type-check only the library, mirroring pyrefly's `project-includes = ["src"]`. Like
# ruff (extend-exclude) and pytest (norecursedirs), ty thus excludes the frozen DEV
# oracle under tests/_dev_oracle, which imports v1 module paths absent in v2. With this,
# a bare `uv run ty check` is clean — no `src/` path argument needed.
include = ["src"]

[tool.coverage.run]
source = ["archivey"]
branch = true

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "except ImportError:",
    "@abstractmethod",
]

[tool.pytest.ini_options]
pythonpath = ["src", "tests", "."]
testpaths = ["tests"]
# --timeout: a hung test fails fast (with a traceback of all threads) instead of stalling
# the whole job until the CI hard limit. pytest-timeout picks the platform default method
# (SIGALRM on POSIX — suite continues; a process-killing thread dump on Windows). 60s is far
# above any real test here (all run in milliseconds), so only a genuine hang trips it.
addopts = "--cov=archivey --cov-report=term-missing --cov-report=xml --timeout=60"
norecursedirs = ["_dev_oracle"]

markers = [
    "sample_archives: declarative parametrization over sample archives and config variants",
]
